--- a/P5_3_INSTAGRAM_KARBYTES_IMAGE_PAGE_3.html
+++ b/P5_3_INSTAGRAM_KARBYTES_IMAGE_PAGE_3.html
@@ -1,7 +1,7 @@
 <hr>
 <p><strong>INSTAGRAM_KARBYTES_IMAGE_PAGE_3</strong></p>
 <hr>
-<p>image_name: <a style="background:#000000;color:#ff9000;" href="https://github.com/karlinarayberinger/INSTAGRAM_KARBYTES_2022/blob/main/instagram_karbytes_08_may_2022_part_3.png" target="_blank" rel="noopener">https://github.com/karlinarayberinger/INSTAGRAM_KARBYTES_2022/blob/main/instagram_karbytes_08_may_2022_part_3.png</a></p>
+<p>image_link: <a style="background:#000000;color:#ff9000;" href="https://github.com/karlinarayberinger/INSTAGRAM_KARBYTES_2022/blob/main/instagram_karbytes_08_may_2022_part_3.png" target="_blank" rel="noopener">https://github.com/karlinarayberinger/INSTAGRAM_KARBYTES_2022/blob/main/instagram_karbytes_08_may_2022_part_3.png</a></p>
 <hr>
 
 
