--- a/P5_4_INSTAGRAM_KARBYTES_IMAGE_PAGE_4.html
+++ b/P5_4_INSTAGRAM_KARBYTES_IMAGE_PAGE_4.html
@@ -1,7 +1,7 @@
 <hr>
 <p><strong>INSTAGRAM_KARBYTES_IMAGE_PAGE_4</strong></p>
 <hr>
-<p>image_name: instagram_karbytes_08_MAY_2022_part_4.png</p>
+<p>image_link: <a style="background:#000000;color:#ff9000;" href="https://github.com/karlinarayberinger/INSTAGRAM_KARBYTES_2022/blob/main/instagram_karbytes_08_may_2022_part_4.png" target="_blank" rel="noopener">https://github.com/karlinarayberinger/INSTAGRAM_KARBYTES_2022/blob/main/instagram_karbytes_08_may_2022_part_4.png</a></p>
 <hr>
 
 
@@ -9,5 +9,5 @@
 
 
 <hr>
-<p>This page was last updated on 08_MAY_2022. The content displayed on this page is licensed as <a style="background:#000000;color:#ff9000;" href="https://karlinaobject.wordpress.com/public_domain/" target="_blank" rel="noopener">PUBLIC_DOMAIN</a> intellectual property.</p>
+<p>This page was last updated on 04_JUNE_2022. The content displayed on this page is licensed as <a style="background:#000000;color:#ff9000;" href="https://karlinaobject.wordpress.com/public_domain/" target="_blank" rel="noopener">PUBLIC_DOMAIN</a> intellectual property.</p>
 <hr>	
