--- a/P5_0_INSTAGRAM_KARBYTES_IMAGE_PAGE_0.html
+++ b/P5_0_INSTAGRAM_KARBYTES_IMAGE_PAGE_0.html
@@ -1,13 +1,29 @@
 <hr>
-<p><strong>INSTAGRAM_KARBYTES_IMAGE_PAGE_0</strong></p>
+<p><strong>INSTAGRAM_KARBYTES_2022</strong></p>
 <hr>
-<p>image_link: <a style="background:#000000;color:#ff9000;" href="https://github.com/karlinarayberinger/INSTAGRAM_KARBYTES_2022/blob/main/instagram_karbytes_08_may_2022_part_0.png" target="_blank" rel="noopener">https://github.com/karlinarayberinger/INSTAGRAM_KARBYTES_2022/blob/main/instagram_karbytes_08_may_2022_part_0.png</a></p>
+<p><span style="background:#ffff00;">This web page is a directory which leads to web pages which each display exactly one screenshot image of content published on the <a style="background:#000000;color:#ff9000;" href="https://www.instagram.com/karbytes/" target="_blank" rel="noopener">@karbytes</a> Instagram page during the year 2022.</span></p>
 <hr>
-
-
-<figure class="wp-block-image size-full"><img data-attachment-id="12147" data-permalink="https://karbytesforlife.wordpress.com/instagram_karbytes_image_page_0/instagram_karbytes_08_may_2022_part_0/" data-orig-file="https://karbytesforlife.files.wordpress.com/2022/05/instagram_karbytes_08_may_2022_part_0.png" data-orig-size="874,1484" data-comments-opened="0" data-image-meta="{&quot;aperture&quot;:&quot;0&quot;,&quot;credit&quot;:&quot;&quot;,&quot;camera&quot;:&quot;&quot;,&quot;caption&quot;:&quot;&quot;,&quot;created_timestamp&quot;:&quot;0&quot;,&quot;copyright&quot;:&quot;&quot;,&quot;focal_length&quot;:&quot;0&quot;,&quot;iso&quot;:&quot;0&quot;,&quot;shutter_speed&quot;:&quot;0&quot;,&quot;title&quot;:&quot;&quot;,&quot;orientation&quot;:&quot;0&quot;}" data-image-title="instagram_karbytes_08_may_2022_part_0" data-image-description="" data-image-caption="" data-medium-file="https://karbytesforlife.files.wordpress.com/2022/05/instagram_karbytes_08_may_2022_part_0.png?w=177" data-large-file="https://karbytesforlife.files.wordpress.com/2022/05/instagram_karbytes_08_may_2022_part_0.png?w=603" src="https://karbytesforlife.files.wordpress.com/2022/05/instagram_karbytes_08_may_2022_part_0.png" alt="" class="wp-image-12147" /></figure>
-
-
+<p><em>This repository contains web page source code and media files which constitute the intellectual property encapsulated by the website named Karbytes For Life dot WordPress dot Com.</em></p>
+<p>repository_link: <a style="background:#000000;color:#ff9000;" href="https://github.com/karlinarayberinger/INSTAGRAM_KARBYTES_2022" target="_blank" rel="noopener">https://github.com/karlinarayberinger/INSTAGRAM_KARBYTES_2022</a></p>
 <hr>
-<p>This page was last updated on 04_JUNE_2022. The content displayed on this page is licensed as <a style="background:#000000;color:#ff9000;" href="https://karlinaobject.wordpress.com/public_domain/" target="_blank" rel="noopener">PUBLIC_DOMAIN</a> intellectual property.</p>
-<hr>	
+<p>image_17: <a style="background:#000000;color:#ff9000;" href="https://karbytesforlife.wordpress.com/instagram_karbytes_image_page_17/" target="_blank" rel="noopener">INSTAGRAM_KARBYTES_IMAGE_PAGE_17</a></p>
+<p>image_16: <a style="background:#000000;color:#ff9000;" href="https://karbytesforlife.wordpress.com/instagram_karbytes_image_page_16/" target="_blank" rel="noopener">INSTAGRAM_KARBYTES_IMAGE_PAGE_16</a></p>
+<p>image_15: <a style="background:#000000;color:#ff9000;" href="https://karbytesforlife.wordpress.com/instagram_karbytes_image_page_15/" target="_blank" rel="noopener">INSTAGRAM_KARBYTES_IMAGE_PAGE_15</a></p>
+<p>image_14: <a style="background:#000000;color:#ff9000;" href="https://karbytesforlife.wordpress.com/instagram_karbytes_image_page_14/" target="_blank" rel="noopener">INSTAGRAM_KARBYTES_IMAGE_PAGE_14</a></p>
+<p>image_13: <a style="background:#000000;color:#ff9000;" href="https://karbytesforlife.wordpress.com/instagram_karbytes_image_page_13/" target="_blank" rel="noopener">INSTAGRAM_KARBYTES_IMAGE_PAGE_13</a></p>
+<p>image_12: <a style="background:#000000;color:#ff9000;" href="https://karbytesforlife.wordpress.com/instagram_karbytes_image_page_12/" target="_blank" rel="noopener">INSTAGRAM_KARBYTES_IMAGE_PAGE_12</a></p>
+<p>image_11: <a style="background:#000000;color:#ff9000;" href="https://karbytesforlife.wordpress.com/instagram_karbytes_image_page_11/" target="_blank" rel="noopener">INSTAGRAM_KARBYTES_IMAGE_PAGE_11</a></p>
+<p>image_10: <a style="background:#000000;color:#ff9000;" href="https://karbytesforlife.wordpress.com/instagram_karbytes_image_page_10/" target="_blank" rel="noopener">INSTAGRAM_KARBYTES_IMAGE_PAGE_10</a></p>
+<p>image_9: <a style="background:#000000;color:#ff9000;" href="https://karbytesforlife.wordpress.com/instagram_karbytes_image_page_9/" target="_blank" rel="noopener">INSTAGRAM_KARBYTES_IMAGE_PAGE_9</a></p>
+<p>image_8: <a style="background:#000000;color:#ff9000;" href="https://karbytesforlife.wordpress.com/instagram_karbytes_image_page_8/" target="_blank" rel="noopener">INSTAGRAM_KARBYTES_IMAGE_PAGE_8</a></p>
+<p>image_7: <a style="background:#000000;color:#ff9000;" href="https://karbytesforlife.wordpress.com/instagram_karbytes_image_page_7/" target="_blank" rel="noopener">INSTAGRAM_KARBYTES_IMAGE_PAGE_7</a></p>
+<p>image_6: <a style="background:#000000;color:#ff9000;" href="https://karbytesforlife.wordpress.com/instagram_karbytes_image_page_6/" target="_blank" rel="noopener">INSTAGRAM_KARBYTES_IMAGE_PAGE_6</a></p>
+<p>image_5: <a style="background:#000000;color:#ff9000;" href="https://karbytesforlife.wordpress.com/instagram_karbytes_image_page_5/" target="_blank" rel="noopener">INSTAGRAM_KARBYTES_IMAGE_PAGE_5</a></p>
+<p>image_4: <a style="background:#000000;color:#ff9000;" href="https://karbytesforlife.wordpress.com/instagram_karbytes_image_page_4/" target="_blank" rel="noopener">INSTAGRAM_KARBYTES_IMAGE_PAGE_4</a></p>
+<p>image_3: <a style="background:#000000;color:#ff9000;" href="https://karbytesforlife.wordpress.com/instagram_karbytes_image_page_3/" target="_blank" rel="noopener">INSTAGRAM_KARBYTES_IMAGE_PAGE_3</a></p>
+<p>image_2: <a style="background:#000000;color:#ff9000;" href="https://karbytesforlife.wordpress.com/instagram_karbytes_image_page_2/" target="_blank" rel="noopener">INSTAGRAM_KARBYTES_IMAGE_PAGE_2</a></p>
+<p>image_1: <a style="background:#000000;color:#ff9000;" href="https://karbytesforlife.wordpress.com/instagram_karbytes_image_page_1/" target="_blank" rel="noopener">INSTAGRAM_KARBYTES_IMAGE_PAGE_1</a></p>
+<p>image_0: <a style="background:#000000;color:#ff9000;" href="https://karbytesforlife.wordpress.com/instagram_karbytes_image_page_0/" target="_blank" rel="noopener">INSTAGRAM_KARBYTES_IMAGE_PAGE_0</a></p>
+<hr>
+<p>This page was last updated on 06_JUNE_2022. The content displayed on this page is licensed as <a style="background:#000000;color:#ff9000;" href="https://karlinaobject.wordpress.com/public_domain/" target="_blank" rel="noopener">PUBLIC_DOMAIN</a> intellectual property.</p>
+<hr>
