--- a/P5_INSTAGRAM_KARBYTES_2022.html
+++ b/P5_INSTAGRAM_KARBYTES_2022.html
@@ -6,6 +6,7 @@
 <p><em>This repository contains web page source code and media files which constitute the intellectual property encapsulated by the website named Karbytes For Life dot WordPress dot Com.</em></p>
 <p>repository_link: <a style="background:#000000;color:#ff9000;" href="https://github.com/karlinarayberinger/INSTAGRAM_KARBYTES_2022" target="_blank" rel="noopener">https://github.com/karlinarayberinger/INSTAGRAM_KARBYTES_2022</a></p>
 <hr>
+<p>image_22: <a style="background:#000000;color:#ff9000;" href="https://karbytesforlife.wordpress.com/instagram_karbytes_image_page_22/" target="_blank" rel="noopener">INSTAGRAM_KARBYTES_IMAGE_PAGE_22</a></p>
 <p>image_21: <a style="background:#000000;color:#ff9000;" href="https://karbytesforlife.wordpress.com/instagram_karbytes_image_page_21/" target="_blank" rel="noopener">INSTAGRAM_KARBYTES_IMAGE_PAGE_21</a></p>
 <p>image_20: <a style="background:#000000;color:#ff9000;" href="https://karbytesforlife.wordpress.com/instagram_karbytes_image_page_20/" target="_blank" rel="noopener">INSTAGRAM_KARBYTES_IMAGE_PAGE_20</a></p>
 <p>image_19: <a style="background:#000000;color:#ff9000;" href="https://karbytesforlife.wordpress.com/instagram_karbytes_image_page_19/" target="_blank" rel="noopener">INSTAGRAM_KARBYTES_IMAGE_PAGE_19</a></p>
