--- a/P5_INSTAGRAM_KARBYTES_2022.html
+++ b/P5_INSTAGRAM_KARBYTES_2022.html
@@ -6,6 +6,7 @@
 <p><em>This repository contains web page source code and media files which constitute the intellectual property encapsulated by the website named Karbytes For Life dot WordPress dot Com.</em></p>
 <p>repository_link: <a style="background:#000000;color:#ff9000;" href="https://github.com/karlinarayberinger/INSTAGRAM_KARBYTES_2022" target="_blank" rel="noopener">https://github.com/karlinarayberinger/INSTAGRAM_KARBYTES_2022</a></p>
 <hr>
+<p>image_25: <a style="background:#000000;color:#ff9000;" href="https://karbytesforlife.wordpress.com/instagram_karbytes_image_page_25/" target="_blank" rel="noopener">INSTAGRAM_KARBYTES_IMAGE_PAGE_25</a></p>
 <p>image_24: <a style="background:#000000;color:#ff9000;" href="https://karbytesforlife.wordpress.com/instagram_karbytes_image_page_24/" target="_blank" rel="noopener">INSTAGRAM_KARBYTES_IMAGE_PAGE_24</a></p>
 <p>image_23: <a style="background:#000000;color:#ff9000;" href="https://karbytesforlife.wordpress.com/instagram_karbytes_image_page_23/" target="_blank" rel="noopener">INSTAGRAM_KARBYTES_IMAGE_PAGE_23</a></p>
 <p>image_22: <a style="background:#000000;color:#ff9000;" href="https://karbytesforlife.wordpress.com/instagram_karbytes_image_page_22/" target="_blank" rel="noopener">INSTAGRAM_KARBYTES_IMAGE_PAGE_22</a></p>
@@ -32,5 +33,5 @@
 <p>image_1: <a style="background:#000000;color:#ff9000;" href="https://karbytesforlife.wordpress.com/instagram_karbytes_image_page_1/" target="_blank" rel="noopener">INSTAGRAM_KARBYTES_IMAGE_PAGE_1</a></p>
 <p>image_0: <a style="background:#000000;color:#ff9000;" href="https://karbytesforlife.wordpress.com/instagram_karbytes_image_page_0/" target="_blank" rel="noopener">INSTAGRAM_KARBYTES_IMAGE_PAGE_0</a></p>
 <hr>
-<p>This page was last updated on 14_JUNE_2022. The content displayed on this page is licensed as <a style="background:#000000;color:#ff9000;" href="https://karlinaobject.wordpress.com/public_domain/" target="_blank" rel="noopener">PUBLIC_DOMAIN</a> intellectual property.</p>
+<p>This page was last updated on 16_JUNE_2022. The content displayed on this page is licensed as <a style="background:#000000;color:#ff9000;" href="https://karlinaobject.wordpress.com/public_domain/" target="_blank" rel="noopener">PUBLIC_DOMAIN</a> intellectual property.</p>
 <hr>
