--- a/P5_INSTAGRAM_KARBYTES_2022.html
+++ b/P5_INSTAGRAM_KARBYTES_2022.html
@@ -6,6 +6,7 @@
 <p><em>This repository contains web page source code and media files which constitute the intellectual property encapsulated by the website named Karbytes For Life dot WordPress dot Com.</em></p>
 <p>repository_link: <a style="background:#000000;color:#ff9000;" href="https://github.com/karlinarayberinger/INSTAGRAM_KARBYTES_2022" target="_blank" rel="noopener">https://github.com/karlinarayberinger/INSTAGRAM_KARBYTES_2022</a></p>
 <hr>
+<p>image_27: <a style="background:#000000;color:#ff9000;" href="https://karbytesforlife.wordpress.com/instagram_karbytes_image_page_27/" target="_blank" rel="noopener">INSTAGRAM_KARBYTES_IMAGE_PAGE_27</a></p>
 <p>image_26: <a style="background:#000000;color:#ff9000;" href="https://karbytesforlife.wordpress.com/instagram_karbytes_image_page_26/" target="_blank" rel="noopener">INSTAGRAM_KARBYTES_IMAGE_PAGE_26</a></p>
 <p>image_25: <a style="background:#000000;color:#ff9000;" href="https://karbytesforlife.wordpress.com/instagram_karbytes_image_page_25/" target="_blank" rel="noopener">INSTAGRAM_KARBYTES_IMAGE_PAGE_25</a></p>
 <p>image_24: <a style="background:#000000;color:#ff9000;" href="https://karbytesforlife.wordpress.com/instagram_karbytes_image_page_24/" target="_blank" rel="noopener">INSTAGRAM_KARBYTES_IMAGE_PAGE_24</a></p>
