--- a/P5_INSTAGRAM_KARBYTES_2022.html
+++ b/P5_INSTAGRAM_KARBYTES_2022.html
@@ -6,6 +6,8 @@
 <p><em>This repository contains web page source code and media files which constitute the intellectual property encapsulated by the website named Karbytes For Life dot WordPress dot Com.</em></p>
 <p>repository_link: <a style="background:#000000;color:#ff9000;" href="https://github.com/karlinarayberinger/INSTAGRAM_KARBYTES_2022" target="_blank" rel="noopener">https://github.com/karlinarayberinger/INSTAGRAM_KARBYTES_2022</a></p>
 <hr>
+<p>image_page_36: <a style="background:#000000;color:#ff9000;" href="https://karbytesforlife.wordpress.com/instagram_karbytes_image_page_36/" target="_blank" rel="noopener">INSTAGRAM_KARBYTES_IMAGE_PAGE_36</a></p>
+<p>image_page_35: <a style="background:#000000;color:#ff9000;" href="https://karbytesforlife.wordpress.com/instagram_karbytes_image_page_35/" target="_blank" rel="noopener">INSTAGRAM_KARBYTES_IMAGE_PAGE_35</a></p>
 <p>image_page_34: <a style="background:#000000;color:#ff9000;" href="https://karbytesforlife.wordpress.com/instagram_karbytes_image_page_34/" target="_blank" rel="noopener">INSTAGRAM_KARBYTES_IMAGE_PAGE_34</a></p>
 <p>image_page_33: <a style="background:#000000;color:#ff9000;" href="https://karbytesforlife.wordpress.com/instagram_karbytes_image_page_33/" target="_blank" rel="noopener">INSTAGRAM_KARBYTES_IMAGE_PAGE_33</a></p>
 <p>image_page_32: <a style="background:#000000;color:#ff9000;" href="https://karbytesforlife.wordpress.com/instagram_karbytes_image_page_32/" target="_blank" rel="noopener">INSTAGRAM_KARBYTES_IMAGE_PAGE_32</a></p>
