--- a/P5_43_INSTAGRAM_KARBYTES_IMAGE_PAGE_43.html
+++ b/P5_43_INSTAGRAM_KARBYTES_IMAGE_PAGE_43.html
@@ -1,9 +1,9 @@
-<hr>
+<hr />
 <p><strong>INSTAGRAM_KARBYTES_IMAGE_PAGE_43</strong></p>
-<hr>
-<p><strong><em>It would be accurately to elaborate that the YOU referenced in that comment to that Instagram post is also a fictional character and that the only conscious entity in that scenario is consciousness itself: the featureless substrate rendering the scenario.</em></strong></p>
+<hr />
+<p><strong><em>It would be accurate for to elaborate that the YOU referenced in that comment I wrote on the Instagram post depicted by the screenshot below is also a fictional character and that the only conscious entity in the scenario I described is consciousness itself: the featureless substrate rendering the scenario.</em></strong></p>
 <p>image_link: <a style="background:#000000;color:#ff9000;" href="https://github.com/karlinarayberinger/INSTAGRAM_KARBYTES_2022/blob/main/instagram_karbytes_28_june_2022_part_0.png" target="_blank" rel="noopener">https://github.com/karlinarayberinger/INSTAGRAM_KARBYTES_2022/blob/main/instagram_karbytes_28_june_2022_part_0.png</a></p>
-<hr>
+<hr />
 
 
 <figure class="wp-block-image size-full"><img data-attachment-id="16255" data-permalink="https://karbytesforlife.wordpress.com/instagram_karbytes_image_page_43/instagram_karbytes_28_june_2022_part_0/" data-orig-file="https://karbytesforlife.files.wordpress.com/2022/06/instagram_karbytes_28_june_2022_part_0.png" data-orig-size="1440,866" data-comments-opened="0" data-image-meta="{&quot;aperture&quot;:&quot;0&quot;,&quot;credit&quot;:&quot;&quot;,&quot;camera&quot;:&quot;&quot;,&quot;caption&quot;:&quot;&quot;,&quot;created_timestamp&quot;:&quot;0&quot;,&quot;copyright&quot;:&quot;&quot;,&quot;focal_length&quot;:&quot;0&quot;,&quot;iso&quot;:&quot;0&quot;,&quot;shutter_speed&quot;:&quot;0&quot;,&quot;title&quot;:&quot;&quot;,&quot;orientation&quot;:&quot;0&quot;}" data-image-title="instagram_karbytes_28_june_2022_part_0" data-image-description="" data-image-caption="" data-medium-file="https://karbytesforlife.files.wordpress.com/2022/06/instagram_karbytes_28_june_2022_part_0.png?w=300" data-large-file="https://karbytesforlife.files.wordpress.com/2022/06/instagram_karbytes_28_june_2022_part_0.png?w=1000" src="https://karbytesforlife.files.wordpress.com/2022/06/instagram_karbytes_28_june_2022_part_0.png" alt="" class="wp-image-16255" /></figure>
