--- a/P5_43_INSTAGRAM_KARBYTES_IMAGE_PAGE_43.html
+++ b/P5_43_INSTAGRAM_KARBYTES_IMAGE_PAGE_43.html
@@ -1,7 +1,7 @@
 <hr />
 <p><strong>INSTAGRAM_KARBYTES_IMAGE_PAGE_43</strong></p>
 <hr />
-<p><strong><em>It would be accurate for to elaborate that the YOU referenced in that comment I wrote on the Instagram post depicted by the screenshot below is also a fictional character and that the only conscious entity in the scenario I described is consciousness itself: the featureless substrate rendering the scenario.</em></strong></p>
+<p><strong><em>It would be accurate for me to elaborate that the YOU referenced in that comment I wrote on the Instagram post depicted by the screenshot below is also a fictional character and that the only conscious entity in the scenario I described is consciousness itself: the featureless substrate rendering the scenario.</em></strong></p>
 <p>image_link: <a style="background:#000000;color:#ff9000;" href="https://github.com/karlinarayberinger/INSTAGRAM_KARBYTES_2022/blob/main/instagram_karbytes_28_june_2022_part_0.png" target="_blank" rel="noopener">https://github.com/karlinarayberinger/INSTAGRAM_KARBYTES_2022/blob/main/instagram_karbytes_28_june_2022_part_0.png</a></p>
 <hr />
 
@@ -11,4 +11,4 @@
 
 <hr>
 <p>This page was last updated on 28_JUNE_2022. The content displayed on this page is licensed as <a style="background:#000000;color:#ff9000;" href="https://karlinaobject.wordpress.com/public_domain/" target="_blank" rel="noopener">PUBLIC_DOMAIN</a> intellectual property.</p>
-<hr>
+<hr>	
