--- a/P5_51_INSTAGRAM_KARBYTES_IMAGE_PAGE_51.html
+++ b/P5_51_INSTAGRAM_KARBYTES_IMAGE_PAGE_51.html
@@ -2,6 +2,7 @@
 <p><strong>INSTAGRAM_KARBYTES_IMAGE_PAGE_51</strong></p>
 <hr>
 <p><strong><em>The following screenshot depicts a quote which I interpreted to imply the following: not all pieces of information can be represented using words. (I still, nevertheless, believe that any piece of information can be precisely encoded as a sequence of binary digits (but perhaps an infinitely long sequence of binary digits)).</em></strong></p>
+<p><strong style="background:#ffff00;"><em>Additional Comment: I think that the quotation depicted below is meant by the original author of that quote to insinuate that people should not try too hard to be articulate using words because people are lazy and do not make enough time to be good at using their verbal prowess to communicate as clearly as they would if they made reading and writing a higher priority than defaulting to using colloquial, trite conventions to convey information quickly (because the masses are conditioned to be dumbed down because their jobs tend to deprive them of time to sharpen and to maintain their physical and mental fitness).</em></strong></p>
 <p>image_link: <a style="background:#000000;color:#ff9000;" href="https://github.com/karlinarayberinger/INSTAGRAM_KARBYTES_2022/blob/main/instagram_karbytes_04_july_2022_part_0.png" target="_blank" rel="noopener">https://github.com/karlinarayberinger/INSTAGRAM_KARBYTES_2022/blob/main/instagram_karbytes_04_july_2022_part_0.png</a></p>
 <hr>
 
@@ -10,5 +11,5 @@
 
 
 <hr>
-<p>This page was last updated on 04_JULY_2022. The content displayed on this page is licensed as <a style="background:#000000;color:#ff9000;" href="https://karlinaobject.wordpress.com/public_domain/" target="_blank" rel="noopener">PUBLIC_DOMAIN</a> intellectual property.</p>
+<p>This page was last updated on 05_JULY_2022. The content displayed on this page is licensed as <a style="background:#000000;color:#ff9000;" href="https://karlinaobject.wordpress.com/public_domain/" target="_blank" rel="noopener">PUBLIC_DOMAIN</a> intellectual property.</p>
 <hr>
